# notes

./: CMakeLists_example.txt.md  Python & C++ Project Design.md  cmake.md  hardware api design.md
.obsidian/: app.json  workspace
code/: CMakeLists.txt
code/CameraExample/CameraApi/: CMakeLists.txt
code/CameraExample/CameraApi/include/: CMakeLists.txt  CameraApi.h
code/CameraExample/CameraApi/src/: CMakeLists.txt  CameraApi.cpp
code/CameraExample/PyCamera/: CMakeLists.txt
code/CameraExample/PyCamera/src/: PyCamera.cpp
